# akinoxmas2022.rust

./: Cargo.toml  README.txt  build.rs
src/: display.rs  lerp.rs  lib.rs  logo.rs  main.rs  platonics.rs  point.rs  scene.rs  scroller.rs  starfield.rs  torus.rs  triangle.rs  vector.rs
